testenv/release02/keel.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/service-account.name: keel
  name: keel
  namespace: kube-system
  labels:
      name: "keel"
spec:
  replicas: 1
  template:
    metadata:
      name: keel
      labels:
        app: keel
    spec:
      containers:
        - image: costinm/keel:alpha
          imagePullPolicy: Always
          name: keel
          command: ["/bin/keel"]
          volumeMounts:
          - mountPath: /var/keel
            name: keel-secret
          ports:
            - containerPort: 9300
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9300
            initialDelaySeconds: 30
            timeoutSeconds: 10
      volumes:
      - name: keel-secret
        secret:
          optional: true
          secretName: keel-secret
