testenv/release02/istio-ingress.yaml
# This is normal Istio ingress, with a custom Envoy config to handle TCP services and additional
# custom configurations.
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingress
  namespace: istio-system
  labels:
    istio: ingress
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  - port: 5201
    name: iperf3
  - port: 5202
    name: iperf3-raw
  - port: 15005
    name: http-pilot
  - port: 15006
    name: grpc-mixer
  - port: 15007
    name: grpc-ca
  selector:
    istio: ingress
---


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    sidecar.istio.io/inject: "false"
    keel.sh/pollSchedule: "@every 10m"
  labels:
    # Will auto-update on gcr.io pushes
    keel.sh/policy: patch
    keel.sh/trigger: poll

spec:
  replicas: 1
  template:
    metadata:
      labels:
        istio: ingress
    spec:
      serviceAccountName: istio-ingress-service-account
      containers:
      - name: istio-ingress
        # Manually start envoy, without using manager, so we can override the config.
        command: ["/usr/local/bin/envoy"]
        image: docker.io/istio/proxy_debug:0.2.12
        #  "-l", "debug",
        args: ["-c", "/etc/envoy/envoy.conf", "--service-cluster", "istio-proxy", "--service-node" , "ingress~~istio-ingress-4019532693-q4g32.istio-system~istio-system.svc.cluster.local"]
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 5201
        - containerPort: 5202
        - containerPort: 15005
        - containerPort: 15006
        - containerPort: 15007
        volumeMounts:
        - name: istio-certs
          mountPath: /etc/certs
          readOnly: true
        - mountPath: /etc/envoy
          name: envoyconfig
        - name: ingress-certs
          mountPath: /etc/istio/ingress-certs
          readOnly: true
        resources:
          requests:
            cpu: 1500m
            memory: "1G"
          limits:
            cpu: 2000m
            memory: "2G"
      volumes:
      - name: istio-certs
        secret:
          secretName: istio.default
          optional: true
      - name: ingress-certs
        secret:
          secretName: istio-ingress-certs
          optional: true
      - name: envoyconfig
        configMap:
            name: envoy-config

---
