testenv/release02/istio-mixer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Service
metadata:
  name: istio-mixer
  namespace: istio-system
  labels:
    istio: mixer
spec:
  ports:
  - name: grpc
    port: 9091
  - name: http-health
    port: 9093
  - name: configapi
    port: 9094
  - name: statsd-prom
    port: 9102
  - name: statsd-udp
    port: 9125
    protocol: UDP
  - name: prometheus
    port: 42422
  selector:
    istio: mixer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: istio-mixer
  namespace: istio-system
  annotations:
    sidecar.istio.io/inject: "false"
    keel.sh/pollSchedule: "@every 30m"
  labels:
    # Will auto-update on gcr.io pushes
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 2
  template:
    metadata:
      labels:
        istio: mixer
    spec:
      serviceAccountName: istio-mixer-service-account
      containers:
      - name: statsd-to-prometheus
        image: prom/statsd-exporter
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9102
        - containerPort: 9125
          protocol: UDP
        args:
        - '-statsd.mapping-config=/etc/statsd/mapping.conf'
        volumeMounts:
        - name: config-volume
          mountPath: /etc/statsd
      - name: mixer
        image: docker.io/istio/mixer:0.2.10
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9091
        - containerPort: 9094
        - containerPort: 42422
        args:
          - --configStoreURL=fs:///etc/opt/mixer/configroot
          - --configStore2URL=k8s://
          - --configDefaultNamespace=istio-system
          - --traceOutput=http://zipkin:9411/api/v1/spans
          - --logtostderr
          - -v
          - "0"
        resources:
          requests:
            cpu: 2000m
            memory: "500M"
          limits:
            cpu: 2000m
            memory: "1G"
      volumes:
      - name: config-volume
        configMap:
          name: istio-mixer
---
